# leads

./: .gitignore  CHANGELOG.md  COMMANDS.md  README.md  pyproject.toml
app/leads/: __init__.py
app/leads/application_core/: README.md  __init__.py  configuration.py  pyproject.toml  use_cases.py
app/leads/application_core/forests/: __init__.py  models.py  services.py
app/leads/application_core/secondary_ports/: README.md  __init__.py  correlation.py  exceptions.py  forests.py  pydantic_models.py  pyproject.toml  storage.py
app/leads/application_core/secondary_ports/config/: __init__.py
app/leads/cli/: README.md  __init__.py  __main__.py  cli_key_bindings.py  cli_logging.py  formatting.py  logging.py  main.py  pyproject.toml
app/leads/cli/click_cli/: __init__.py  cli_builder.py  types.py
app/leads/cli/click_cli/config/: __init__.py  config_builder.py  get_command.py  list_command.py  set_command.py
app/leads/cli/configuration/: __init__.py  cache.py  configuration_logging.py  factory.py  logging.py  min_log_level.py  models.py
app/leads/cli/dependency_injection/: __init__.py  container.py
app/leads/cli/dependency_injection/secondary_adapters/: __init__.py
app/leads/cli/dependency_injection/secondary_adapters/mongodb_/: storage.py
app/leads/cli/dependency_injection/secondary_adapters/mongodb_adapters/: storage.py
app/leads/cli/dependency_injection/secondary_adapters/sqlite_/: storage.py
app/leads/cli/dependency_injection/secondary_adapters/sqlite_adapters/: __init__.py  storage.py
app/leads/cli/prompt_toolkit_cli/: __init__.py  cli_builder.py  cli_key_bindings.py  cli_state.py  cli_styles.py  models.py  styles.py
app/leads/cli/prompt_toolkit_cli/command_panel/: builder.py
app/leads/cli/prompt_toolkit_cli/command_panel_cli/: content_builder.py
app/leads/cli/prompt_toolkit_cli/content_panel/: builder.py
app/leads/cli/prompt_toolkit_cli/content_panel/configuration/: builder.py  key_bindings.py
app/leads/cli/prompt_toolkit_cli/content_panel/forests/: builder.py
app/leads/cli/prompt_toolkit_cli/content_panel/trails/: content_builder.py
app/leads/cli/prompt_toolkit_cli/content_panel_cli/: builder.py
app/leads/cli/prompt_toolkit_cli/content_panel_cli/configuration_cli/: builder.py
app/leads/cli/prompt_toolkit_cli/content_panel_cli/forests_cli/: builder.py
app/leads/cli/prompt_toolkit_cli/content_panel_cli/trails_cli/: content_builder.py
app/leads/cli/prompt_toolkit_cli/header_panel_cli/: builder.py
app/leads/cli/prompt_toolkit_cli/menu_panel/: builder.py  key_bindings.py
app/leads/cli/prompt_toolkit_cli/menu_panel_cli/: builder.py
app/leads/cli/prompt_toolkit_cli/notification_panel/: builder.py
app/leads/cli/prompt_toolkit_cli/state_panel/: builder.py
app/leads/cli/prompt_toolkit_cli/state_panel_builder/: builder.py
app/leads/cli/prompt_toolkit_cli/title_panel/: builder.py
app/leads/cli/textual_cli/: __init__.py  app.py  app_view_model.py  models.py
app/leads/cli/textual_cli/panels/: __init__.py  app_view_model.py  base_view.py
app/leads/cli/textual_cli/panels/command_panel/: panel.py
app/leads/cli/textual_cli/panels/content_panel/: base_view.py  panel.py
app/leads/cli/textual_cli/panels/content_panel/configuration_tab/: tab.py  view_model.py
app/leads/cli/textual_cli/panels/header_panel/: panel.py
app/leads/cli/textual_cli/panels/header_panel/hotkeys_panel/: __init__.py  panel.py  view_model.py
app/leads/cli/textual_cli/panels/header_panel/state_panel/: panel.py
app/leads/cli/textual_cli/panels/menu_panel/: panel.py  view_model.py
app/leads/cli/textual_cli/panels/notification_panel/: __init__.py  panel.py  view_model.py
app/leads/cli/view_models/: __init__.py  app_view_model.py  configuration_view_model.py  forests_view_model.py  hotkeys_view_model.py  menu_view_model.py  notification_view_model.py  state_panel_view_model.py
app/leads/cli/views/: __init__.py  app.py  models.py
app/leads/cli/views/panels/: __init__.py  base_view.py
app/leads/cli/views/panels/command_panel/: __init__.py  panel.py
app/leads/cli/views/panels/content_panel/: __init__.py  editable_input.py  panel.py
app/leads/cli/views/panels/content_panel/configuration_tab/: __init__.py  tab.py
app/leads/cli/views/panels/content_panel/forests_tab/: __init__.py  forest_creation_modal.py  forest_creation_update_modal.py  forest_deletion_modal.py  forest_update_modal.py  tab.py
app/leads/cli/views/panels/header_panel/: __init__.py  panel.py
app/leads/cli/views/panels/header_panel/hotkeys_panel/: __init__.py  panel.py
app/leads/cli/views/panels/header_panel/state_panel/: panel.py
app/leads/cli/views/panels/header_panel/title_panel/: panel.py
app/leads/cli/views/panels/menu_panel/: __init__.py  panel.py
app/leads/cli/views/panels/notification_panel/: panel.py
app/leads/secondary_adapters/: README.md  __init__.py  pyproject.toml
app/leads/secondary_adapters/mongodb_/: configuration.py  storage.py
app/leads/secondary_adapters/mongodb_adapter/: __init__.py  client_cache.py  configuration.py  factories.py  forests.py  storage.py
app/leads/secondary_adapters/sqlite_/: configuration.py
app/leads/secondary_adapters/structlog/: __init__.py  correlation.py
app/leads/secondary_adapters/structlog_/: __init__.py
app/leads/secondary_adapters/structlog_adapter/: correlation.py
app/leads/test_cli/: README.md  __init__.py  pyproject.toml
app/test_leads/: __init__.py
app/test_leads/test_cli/: README.md  __init__.py  pyproject.toml
installer/: create-platform-specific-executable.py  macos-install-cli-to-user-bin.py  x-os-build-executable.py
src/: Leads.sln
src/Leads.Core/: Config.fs  ConstrainedTypes.fs  Lead.fs  Leads.Core.fsproj  Leads.fs  LeadsConfigurations.fs  Models.fs  ResultExtensions.fs  Stream.fs  Streams.fs  Trail.fs  Trails.fs
src/Leads.Core.Tests/: GetConfig.fs  Leads.Core.Tests.fsproj  Library.fs
src/Leads.DrivenAdapters/: ConfigAdapters.fs  ConsoleAdapters.fs  ForestAdapters.fs  JsonBased.fs  Leads.DrivenAdapters.fsproj  StreamAdapters.fs
src/Leads.DrivenPorts/: Config.fs  Forest.fs  Library.fs
(+87 files in other folders)
