[tool.poetry]
name = "leads-application-core"
version = "0.0.0"
description = "Leads Application Core"
authors = ["Kostiantyn Chomakov <kostiantyn.chomakov@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [
    { include = "leads/application_core", from = "../../" },
]

exclude = [
    "*.lock",
    "*.toml",
    "README.md",
    "./secondary_ports",
]

classifiers = [
    'Programming Language :: Python :: 3',
    "License :: OSI Approved :: Apache Software License",
    'Operating System :: OS Independent'
]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
returns = "^0.26.0"
structlog = "^25.5.0"
pydantic = "^2.12.5"
spinq = "^1.4.0"
leads-application-core-secondary-ports = { path = "./secondary_ports", develop = true }

[project]
name = "leads-application-core"

[project.urls]
homepage = "https://github.com/takinosaji/leads"
repository = "https://github.com/takinosajscriptsi/leads"
documentation = "https://github.com/takinosaji/leads"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true