[tool.poetry]
name = "leads-cli"
version = "0.0.0"
description = "CLI Primary Adapter for Leads"
authors = ["Kostiantyn Chomakov <kostiantyn.chomakov@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [
    { include = "leads/cli", from = "../../" },
]

exclude = [
    "*.lock",
    "*.toml",
    "README.md"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
pyyaml = "^6.0"
pydantic = "^2.11.9"
pymongo = {extras = ["srv"], version = "^4.15.5" }
structlog = "^25.4.0"
click = "^8.3.0"
partial-injector = "^2.3.6"
spinq = "^1.4.0"
returns = "^0.26.0"
nanoid = "^2.0.0"
textual = "^6.10.0"
leads-application-core = { path = "../application_core", develop = true }
leads-secondary-adapters = { path = "../secondary_adapters", develop = true }
rx = "^3.2.0"


[project]
name = "leads-cli"

[project.urls]
homepage = "https://github.com/takinosaji/leads"
repository = "https://github.com/takinosajscriptsi/leads"
documentation = "https://github.com/takinosaji/leads"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true