[tool.poetry]
name = "leads-secondary-adapters"
version = "0.0.0"
description = "Leads Secondary Adapters"
authors = ["Kostiantyn Chomakov <kostiantyn.chomakov@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [
    { include = "leads/secondary_adapters", from = "../../" },
]

exclude = [
    "*.lock",
    "*.toml",
    "README.md"
]

classifiers = [
    'Programming Language :: Python :: 3',
    "License :: OSI Approved :: Apache Software License",
    'Operating System :: OS Independent'
]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
returns = "^0.26.0"
structlog = "^25.5.0"
pydantic = "^2.12.5"
spinq = "^1.4.0"
leads-application-core-secondary-ports = { path = "../application_core/secondary_ports", develop = true }

[project]
name = "leads-secondary-adapters"

[project.urls]
homepage = "https://github.com/takinosaji/leads"
repository = "https://github.com/takinosajscriptsi/leads"
documentation = "https://github.com/takinosaji/leads"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true