[tool.poetry]
name = "leads-cli-tests"
version = "0.0.0"
description = "CLI Primary Adapter Tests for Leads"
authors = ["Kostiantyn Chomakov <kostiantyn.chomakov@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [
    { include = "test_leads/test_cli", from = "../../" },
]

exclude = [
    "*.lock",
    "*.toml",
    "README.md",
    "./secondary_ports",
]

classifiers = [
    'Programming Language :: Python :: 3',
    "License :: OSI Approved :: Apache Software License",
    'Operating System :: OS Independent'
]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
structlog = "^25.5.0"
spinq = "^1.4.0"
leads-cli = { path = "../../leads/cli", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
Faker = "^37.8.0"

[project]
name = "leads-cli-tests"

[project.urls]
homepage = "https://github.com/takinosaji/leads"
repository = "https://github.com/takinosajscriptsi/leads"
documentation = "https://github.com/takinosaji/leads"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true