[tool.poetry]
name = "leads-application-core-secondary-ports"
version = "0.0.0"
description = "Leads Application Core Secondary Ports"
authors = ["Kostiantyn Chomakov <kostiantyn.chomakov@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [
    { include = "leads/application_core/secondary_ports", from = "../../../" },
]

exclude = [
    "*.lock",
    "*.toml",
    "README.md"
]

classifiers = [
    'Programming Language :: Python :: 3',
    "License :: OSI Approved :: Apache Software License",
    'Operating System :: OS Independent'
]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
structlog = "^25.4.0"
spinq = "^1.1.0"

[project]
name = "leads-application-core-secondary-ports"

[project.urls]
homepage = "https://github.com/takinosaji/leads"
repository = "https://github.com/takinosajscriptsi/leads"
documentation = "https://github.com/takinosaji/leads"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true